# Txt-Merger

./: README.md  日记文件合并.sln
日记文件合并/: .gitignore  CMakeLists.txt  FileMerge.cpp  combined.txt  日记文件合并.vcxproj  日记文件合并.vcxproj.filters
日记文件合并/include/: EncodingUtils.h  FileUtils.h
日记文件合并/src/: EncodingUtils.cpp  FileUtils.cpp  main.cpp
